--- a/public/index.html
+++ b/public/index.html
@@ -10,27 +10,24 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Couch Potato is a comprehensive movie and TV show search engine that provides streaming availability, recommendations, and allows you to watch movies and TV shows online. Search for popular movies, top-rated TV shows, new releases, and more. Discover the best movie streaming services and TV show streaming platforms for your favorite content. Find where to stream your favorite movies and TV shows in the US."
     />
     <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
 
-
+    <!-- Favicon -->
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
+    <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/favicon-16x16.png">
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
+    <!-- Title -->
     <title>Couch Potato - Movie and TV Streaming Availability</title>
+    <meta property="og:title" content="Couch Potato - Movie and TV Streaming Availability">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="%PUBLIC_URL%/logo.png">
+    <meta property="og:description" content="Web site created using create-react-app">
+
+    <!-- Manifest -->
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
