--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,16 @@
 
     <!-- Manifest -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-CMRR9M2FBT"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-CMRR9M2FBT');
+</script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
