about section styling and seo friendly

--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,8 @@
     <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/favicon-16x16.png">
 
     <!-- Title -->
-    <title>Couch Potato - Movie and TV Streaming Availability</title>
+    <title>Couch Potato: Find Streaming Platforms for Movies & TV Shows | New Releases</title>
+
     <meta property="og:title" content="Couch Potato - Movie and TV Streaming Availability">
     <meta property="og:type" content="website">
     <meta property="og:image" content="%PUBLIC_URL%/logo.png">
